correct FAQ spacing and images and added dynamic time-stamps for engagements

--- a/src/index.css
+++ b/src/index.css
@@ -53,14 +53,6 @@ code {
   color: #27a5ef;
 }
 
-.caro {
-  border-style: solid;
-  border-width: 14px;
-  border-color: #21539e;
-  border-radius: 20px;
-  height: 20rem;
-  width: 31rem;
-}
 
 .caption {
   font-family: Inter;
@@ -98,9 +90,9 @@ code {
 
 .caro {
   border-style: solid;
-  border-width: 14px;
+  border-width: 8px;
   border-color: #21539e;
-  border-radius: 20px;
+  border-radius: 40px;
   height: 20rem;
   width: 31rem;
 }
